[project]
name = "boris"
version = "0.1.0"
description = ""
authors = [
    {name = "hellwebprice",email = "hellwebprice@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.6"
tqdm = "^4.67.1"
plotly = "^6.0.1"
matplotlib = "^3.10.1"
nbformat = "^5.10.4"

